--- a/devenv.yaml
+++ b/devenv.yaml
@@ -1,9 +1,15 @@
-# yaml-language-server: $schema=https://devenv.sh/devenv.schema.json
 inputs:
   nixpkgs:
-    url: github:nixos/nixpkgs/nixpkgs-unstable
-  nixpkgs-ruby:
-    url: "github:bobvanderlinden/nixpkgs-ruby"
+    url: github:NixOS/nixpkgs/nixpkgs-unstable
+
+  ruby-nix:
+    url: github:inscapist/ruby-nix
     inputs:
       nixpkgs:
-        follows: "nixpkgs"
+        follows: nixpkgs
+
+  bundix:
+    url: github:inscapist/bundix/main
+    inputs:
+      nixpkgs:
+        follows: nixpkgs
